i18n update from Transifex

--- a/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -11,7 +11,7 @@ br = Bret\u00f3n
 
 ca = Catal\u00e1n
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Catal\u00e1n (Valencianu)
 
 category_case = May\u00fascules y min\u00fascules
 
@@ -27,9 +27,9 @@ checkDone = Comprobaci\u00f3n fecha, atop\u00e1ronse {0} problemes potenciales
 
 checkText = &Comprobar testu
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Comprobar testu
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Comprobar testu
 
 correctionMessage = Correici\u00f3n\:
 
@@ -81,7 +81,7 @@ desc_spelling_short = Fallu d'ortograf\u00eda
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Espaciu enantes de coma, puntu y coma y porcentaxe.
 
 # 3607406 -
 
@@ -156,9 +156,9 @@ guiMenuHide = &Minimizar na bandexa'l sistema
 
 guiMenuOpen = &Abrir...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = Abrir ficheru
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = Abrir ficheru
 
 guiMenuOptions = Opcione&s...
 
@@ -221,11 +221,11 @@ no_space_before_dot = Nun pongas un espaciu enantes del puntu
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = Nun pongas un espaciu enantes de la coma
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = Nun pongas un espaciu enantes del puntu y coma
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Nun pongas un espaciu enantes del signu de porcentaxe
 
 # 3607406 -
 
@@ -299,44 +299,44 @@ tray_menu_enable_server = Executar sirvidor HTTP
 
 tray_tooltip_server_running = LanguageTool (sirvidor HTTP execut\u00e1ndose)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = &Editar
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = Comprobaci\u00f3n de &testu
 
-# guiMenuSave = &Save
+guiMenuSave = &Guardar
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Guardar ficheru
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Guardar ficheru
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Guardar &como
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Guardar ficheru como
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Guardar ficheru como
 
-# guiMenuCut = Cut
+guiMenuCut = Cortar
 
-# guiMenuCopy = Copy
+guiMenuCopy = Copiar
 
-# guiMenuPaste = Paste
+guiMenuPaste = Apegar
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Seleicionar too
 
-# guiMenuUndo = &Undo
+guiMenuUndo = &Esfacer
 
-# guiMenuRedo = &Redo
+guiMenuRedo = &Refacer
 
-# autoCheckText = AutoCheck
+autoCheckText = Autocomprobar
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = Autocomprobar
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = Autocomprobar
 
-# guiActivateRule = Activate Rule
+guiActivateRule = Activar regla
 
-# guiMore = More...
+guiMore = M\u00e1s...
 
-# guiUndo = Undo
+guiUndo = Esfacer
 
-# guiRedo = Redo
+guiRedo = Refacer
