--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -81,7 +81,7 @@ desc_spelling_short = Stavefejl
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Mellemrum for kolon, simikolon og procenttegn.
 
 # 3607406 -
 
@@ -225,7 +225,7 @@ no_space_before_colon = Inds\u00e6t ikke et mellemrum f\u00f8r kolon
 
 no_space_before_semicolon = Inds\u00e6t ikke et mellemrum f\u00f8r semikolon
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Inds\u00e6t ikke et mellemrum f\u00f8r procenttegn
 
 # 3607406 -
 
@@ -301,7 +301,7 @@ tray_tooltip_server_running = LanguageTool (HTTP server k\u00f8re)
 
 guiMenuEdit = &Rediger
 
-guiMenuGrammar = &Tekst-kontrol
+guiMenuGrammar = &Tekstkontrol
 
 guiMenuSave = &Gem
 
