--- a/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
+++ b/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
@@ -11,7 +11,7 @@ br = Bretona
 
 ca = Kataluna
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Kataluna (valencia)
 
 category_case = Uskleco
 
