--- a/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
+++ b/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
@@ -11,7 +11,7 @@ br = Bret\u00f3nsky
 
 ca = Katal\u00e1nsky
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Katal\u00e1nsky (Valencijsk\u00fd)
 
 category_case = Ve\u013ek\u00e9 a mal\u00e9 p\u00edsmen\u00e1
 
@@ -27,9 +27,9 @@ checkDone = Kontrola je ukon\u010den\u00e1, {0} n\u00e1jden\u00fdch potenci\u00e
 
 checkText = S&kontrolova\u0165
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Skontrolova\u0165 text
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Skontrolova\u0165 text
 
 correctionMessage = Oprava\:
 
@@ -81,7 +81,7 @@ desc_spelling_short = Preklep
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Pou\u017eitie medzery pred \u010diarkou, bodko\u010diarkou a percentom.
 
 # 3607406 -
 
@@ -156,9 +156,9 @@ guiMenuHide = &Skry\u0165 do syst\u00e9movej &li\u0161ty
 
 guiMenuOpen = &Otvori\u0165...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = Otvori\u0165 s\u00fabor
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = Otvori\u0165 s\u00fabor
 
 guiMenuOptions = Na&stavenia...
 
@@ -207,25 +207,25 @@ km = Khm\u00e9rsky
 
 lt = Litovsk\u00fd
 
-missing_space_after_comma = Vlo\u017ete medze za \u010diarku
+missing_space_after_comma = Vlo\u017ete medzeru za \u010diarku
 
 ml = Malajzijsk\u00fd
 
 nl = Holandsky
 
-no_space_after = Nevlo\u017ei\u0165 medzeru pred otv\u00e1raciu z\u00e1tvorku
+no_space_after = Nevlo\u017ei\u0165 medzeru za otv\u00e1raciu z\u00e1tvorku
 
-no_space_before = Nevlo\u017ei\u0165 medzeru za otv\u00e1raciu z\u00e1tvorku
+no_space_before = Nevlo\u017ei\u0165 medzeru pred ukon\u010dovaciu z\u00e1tvorku
 
 no_space_before_dot = Nevlo\u017ei\u0165 medzeru pred bodku
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = Ned\u00e1va\u0165 medzeru pred dvojbodku
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = Ned\u00e1va\u0165 medzeru pred bodko\u010diarku
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Ned\u00e1va\u0165 medzeru pred percento
 
 # 3607406 -
 
@@ -299,44 +299,44 @@ tray_menu_enable_server = Spusti\u0165 HTTP server
 
 tray_tooltip_server_running = LanguageTool (HTTP server be\u017e\u00ed)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = &Upravi\u0165
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = Kontrola &textu
 
-# guiMenuSave = &Save
+guiMenuSave = U&lo\u017ei\u0165
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Ulo\u017ei\u0165 s\u00fabor
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Ulo\u017ei\u0165 s\u00fabor
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Ulo\u017ei\u0165 &ako
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Ulo\u017ei\u0165 s\u00fabor ako
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Ulo\u017ei\u0165 s\u00fabor ako
 
-# guiMenuCut = Cut
+guiMenuCut = Vystrihn\u00fa\u0165
 
-# guiMenuCopy = Copy
+guiMenuCopy = Kop\u00edrova\u0165
 
-# guiMenuPaste = Paste
+guiMenuPaste = Vlo\u017ei\u0165
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Vybra\u0165 v\u0161etko
 
-# guiMenuUndo = &Undo
+guiMenuUndo = S&p\u00e4\u0165
 
-# guiMenuRedo = &Redo
+guiMenuRedo = &Znova
 
-# autoCheckText = AutoCheck
+autoCheckText = AutoKontrola
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = AutoKontrola
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = AutoKontrola
 
-# guiActivateRule = Activate Rule
+guiActivateRule = Aktivova\u0165 pravidlo
 
-# guiMore = More...
+guiMore = Viac...
 
-# guiUndo = Undo
+guiUndo = Sp\u00e4\u0165
 
-# guiRedo = Redo
+guiRedo = Znova
