--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -1,6 +1,6 @@
 LanguageTool Change Log
 
-2.3-SNAPSHOT (release planned for 2013-09-30)
+2.3 (2013-09-30)
 
  -Breton:
   -added/improved a few rules
@@ -19,9 +19,9 @@ LanguageTool Change Log
    (http://sourceforge.net/p/languagetool/bugs/186/)
    
  -English:
-   -added replacement patterns for the spelling checker to make suggestions
-    better (now offers 'taught' for 'teached')
-   -added/improved a few rules
+  -added replacement patterns for the spelling checker to make suggestions
+   better (now offers 'taught' for 'teached')
+  -added/improved a few rules
 
  -French:
   -added/improved a few rules
@@ -34,6 +34,9 @@ LanguageTool Change Log
  -Portuguese:
   -added/improved a few rules
   -it now has 3300+ compound words
+  
+ -Ukranian
+  -added/improved several rules
 
 
  -the source code has been moved to github:
