--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -35,7 +35,7 @@ LanguageTool Change Log
   -added/improved a few rules
   -it now has 3300+ compound words
   
- -Ukranian
+ -Ukrainian:
   -added/improved several rules
 
 
