add missing translation for de-DE-x-simple-language

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -45,6 +45,8 @@ de-AT = German (Austrian)
 
 de-CH = German (Swiss)
 
+de-DE-x-simple-language = German (Easy German)
+
 # deactivate rule with one click (stand-alone GUI):
 deactivateRule = (deactivate)
 
