move some non-core helper methods to the gui-commons project

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -3,6 +3,10 @@ LanguageTool Change Log
 2.4-SNAPSHOT (release planned for 2013-12-29)
 
  -...
+ 
+ -API:
+  -Some methods from org.languagetool.tools.StringTools have been moved to 
+   the org.languagetool.gui.Tools class in the languagetool-gui-commons project
 
 
 2.3 (2013-09-30)
