add link to Wiki contribution page to the result

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -25,6 +25,8 @@ category_typo = Possible Typo
 
 checkDone = Potential problems found: {0} (time: {1}ms)
 
+makeLanguageToolBetter = <a href="http://wiki.languagetool.org/make-languagetool-better">How to contribute to improve LanguageTool</a>
+
 checkText = &Check Text
 
 checkTextShortDesc = Check Text
