cleanup: move SymbolLocator to a better place and make it non-public

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -7,6 +7,7 @@ LanguageTool Change Log
  -API:
   -Some methods from org.languagetool.tools.StringTools have been moved to 
    the org.languagetool.gui.Tools class in the languagetool-gui-commons project
+  -org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
 
 
 2.3 (2013-09-30)
