added hint for issue #13

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -8,6 +8,7 @@ LanguageTool Change Log
   -Some methods from org.languagetool.tools.StringTools have been moved to 
    the org.languagetool.gui.Tools class in the languagetool-gui-commons project
   -org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
+  -improved thread-safety for UnifierConfiguration
 
 
 2.3 (2013-09-30)
