--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -10,6 +10,11 @@ LanguageTool Change Log
   -org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
   -improved thread-safety for UnifierConfiguration
 
+ -languagetool-wikipedia: the command line options for checking a Wikipedia dump
+  have been simplified. The command can now be called like this:
+  java -jar languagetool-wikipedia.jar check-dump -l en -f enwiki-20130621-pages-articles.xml
+  Call just "java -jar languagetool-wikipedia.jar check-dump" to get a usage message.
+
 
 2.3 (2013-09-30)
 
