[en] fix false alarms and disambiguate more... not sure about aVSanRule

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -4,6 +4,14 @@ LanguageTool Change Log
 
  -...
  
+ -English:
+  -added/improved a few rules
+  -fixed some false alarms
+ 
+ -fixed a bug where chunk annotations were not tested in <and> groups
+ 
+ -added support for chunk annotations in the disambiguator
+ 
  -API:
   -Some methods from org.languagetool.tools.StringTools have been moved to 
    the org.languagetool.gui.Tools class in the languagetool-gui-commons project
