--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -46,7 +46,7 @@ deactivateRule = (desactiva)
 deactivatedRulesText = <br>Regles desactivades - feu clic per a activar-les de nou:
 desc_comma_whitespace = Espais abans de coma i abans i despr\u00e9s dels par\u00e8ntesis
 desc_double_punct = Dos punts o dues comes consecutives
-desc_repetition = Repetici\u00f3 de paraules (p. ex. 'm\u00e0 m\u00e0')
+desc_repetition = Repetici\u00f3 de paraules (p. ex. \u00abm\u00e0 m\u00e0\u00bb)
 desc_repetition_short = Repetici\u00f3 de paraules
 desc_repetition_beginning = Frases successives que comencen amb la mateixa paraula
 desc_repetition_beginning_word = Tres frases successives comencen amb la mateixa paraula.
@@ -240,7 +240,7 @@ textLanguage = Llengua del text:
 two_commas = Dues comes consecutives
 two_dots = Dos punts consecutius
 uk = ucra\u00efn\u00e8s
-unpaired_brackets = S\u00edmbol sense parella: sembla que falta \u2018{0}\u2019.
+unpaired_brackets = S\u00edmbol sense parella: sembla que falta \u00ab{0}\u00bb.
 useGUIConfig = Usa els par\u00e0metres de dalt per al servidor
 whitespace_repetition = Possible error: heu repetit un espai en blanc
 ro = roman\u00e8s
@@ -330,14 +330,14 @@ ta = t\u00e0mil
 fa = persa
 ar = \u00e0rab
 # note that the statistics rule is not offered for all languages, see http://wiki.languagetool.org/finding-errors-using-n-gram-data
-statistics_rule_description = Detecta el possible \u00fas erroni de ''{0}'' en comptes de ''{1}''.
-statistics_suggest1_new = ''{2}'' ({3}) sembla menys probable que ''{0}'' ({1}).
-statistics_suggest2_new = ''{2}'' sembla menys probable que ''{0}'' ({1}).
-statistics_suggest3_new = ''{1}'' sembla menys probable que ''{0}''.
-statistics_suggest4_new = ''{1}'' ({2}) sembla menys probable que ''{0}''.
+statistics_rule_description = Detecta el possible \u00fas erroni de \u00ab{0}\u00bb en comptes de \u00ab{1}\u00bb.
+statistics_suggest1_new = \u00ab{2}\u00bb ({3}) sembla m\u00e9s poc probable que \u00ab{0}\u00bb ({1}).
+statistics_suggest2_new = \u00ab{2}\u00bb sembla m\u00e9s poc probable que \u00ab{0}\u00bb ({1}).
+statistics_suggest3_new = \u00ab{1}\u00bb sembla m\u00e9s poc probable que \u00ab{0}\u00bb.
+statistics_suggest4_new = \u00ab{1}\u00bb ({2}) sembla m\u00e9s poc probable que \u00ab{0}\u00bb.
 statistics_suggest_short_desc = Possible confusi\u00f3 de paraula
-neural_network_suggest_with_description = La xarxa neuronal pensa que ''{0}'' ({1}) pot ser la paraula correcta ac\u00ed, no ''{2}'' ({3}). Reviseu-ho.
-neural_network_suggest = La xarxa neuronal pensa que ''{0}'' pot ser la paraula correcta ac\u00ed, no ''{1}''. Reviseu-ho.
+neural_network_suggest_with_description = La xarxa neuronal pensa que \u00ab{0}\u00bb ({1}) pot ser la paraula correcta ac\u00ed, no \u00ab{2}\u00bb ({3}). Reviseu-ho.
+neural_network_suggest = La xarxa neuronal pensa que \u00ab{0}\u00bb pot ser la paraula correcta ac\u00ed, no \u00ab{1}\u00bb. Reviseu-ho.
 unsupportedWarning = Atenci\u00f3: Aquesta llengua no t\u00e9 suport complet en LanguageTool perqu\u00e8 no hi ha ning\u00fa que la mantingui activament. <a href="https://languagetool.org/contribute/">Sapigueu com podeu ajudar.</a>
 token = Token
 disambiguatorLog = Registre de desambiguaci\u00f3
