--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -396,8 +396,8 @@ loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and gr
 loCheckStatusInitialization = Initialization
 loCheckStatusCheck = Check
 loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy! Please try later!
-loWaitMessage = Initializing dialog! Please wait!
+loBusyMessage = LibreOffice is busy. Please try later.
+loWaitMessage = Initializing dialog. Please wait.
 loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
 loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
 loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and start the dialog again.
