--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -396,6 +396,8 @@ loDialogErrorCloseMessage = Ett internt fel har uppst\u00e5tt.\nLT-granskningsdi
 loCheckStatusInitialization = Startar
 loCheckStatusCheck = Granska
 loLabelCheckProgress = Granskad text:
+loBusyMessage = LibreOffice is busy. Please try later.
+loWaitMessage = Initializing dialog. Please wait.
 loExtHeapMessage = LanguageTools minnesgr\u00e4ns har n\u00e5tts. Byter till styckesl\u00e4get. Vissa textniv\u00e5regler kommer inte att fungera.
 loExtSwitchOffMessage = LanguageTool \u00e4r avst\u00e4ngt. Sl\u00e5 p\u00e5 det igen f\u00f6r att granska texten.
 loDialogUnsupported = Grammatikkontrollen st\u00f6der inte inb\u00e4ddade objekt som grafik, bilder eller textobjekt. \nPlacera mark\u00f6ren i textytan och \u00f6ppna dialogen igen.
