--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -396,8 +396,8 @@ loDialogErrorCloseMessage = Ein interner Fehler ist aufgetreten. \nDer LT-Dialog
 loCheckStatusInitialization = Initialisierung
 loCheckStatusCheck = Pr\u00fcfung
 loLabelCheckProgress = Gepr\u00fcfter Text:
-loBusyMessage = LibreOffice is busy. Please try later.
-loWaitMessage = Initializing dialog. Please wait.
+loBusyMessage = LibreOffice ist besch\u00e4ftigt. \nBitte versuchen Sie es sp\u00e4ter.
+loWaitMessage = Initialisierung des Dialogs. \nBitte warten.
 loExtHeapMessage = Speicherlimit f\u00fcr LanguageTool erreicht. Es wird in den Absatzmodus gewechselt, sodass einige Regeln, die Fehler \u00fcber Absatzgrenzen finden, nicht funktionieren werden.
 loExtSwitchOffMessage = LanguageTool ist ausgeschaltet. Schalten Sie es an, um diese Funktion zu nutzen.
 loDialogUnsupported = Die Grammatikpr\u00fcfung unterst\u00fctzt keine enthaltenen Objekte wie Grafiken, Bilder oder Textobjekte.\nBitte setzen Sie den Cursor in den Text und starten Sie den Dialog erneut.
