--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -396,8 +396,8 @@ loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and gr
 loCheckStatusInitialization = Uruchamianie
 loCheckStatusCheck = Sprawdzanie
 loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy. Please try later.
-loWaitMessage = Initializing dialog. Please wait.
+loBusyMessage = LibreOffice is busy. \nPlease try later.
+loWaitMessage = Initializing dialog. \nPlease wait.
 loExtHeapMessage = Osi\u0105gni\u0119to limit pami\u0119ci programu LanguageTool. Program prze\u0142\u0105cza si\u0119 w tryb pojedynczego akapitu. Niekt\u00f3re regu\u0142y poziomu tekstu nie b\u0119d\u0105 poprawnie dzia\u0142a\u0107.
 loExtSwitchOffMessage = Program LanguageTool jest wy\u0142\u0105czony. W\u0142\u0105cz go, aby uruchomi\u0107 t\u0119 funkcj\u0119.
 loDialogUnsupported = Sprawdzanie gramatyki nie obs\u0142uguje za\u0142\u0105czonych obiekt\u00f3w takich jak grafika, obrazki czy obiekty tekstowe. \nUstaw kursor w tek\u015bcie i ponownie uruchom okno dialogowe.
