[LO extension] add new feature permanent ignored spelling errors to check dialog

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -393,6 +393,7 @@ loDialogChangeAllButtonHelp = For spelling errors only:\n Changes all misspelled
 loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
 loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
 loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Initialization
 loCheckStatusCheck = Check
 loLabelCheckProgress = Checked text:
