--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = Sols per a errors ortogr\u00e0fics:\nCanvia totes 
 loDialogAutoCorrectButtonHelp = Canvia totes les paraules mal escrites en el document al suggeriment triat. \nAfegeix un suggeriment a la correcci\u00f3 autom\u00e0tica.
 loDialogHelpText = El di\u00e0leg de verificaci\u00f3 ortogr\u00e0fica i gramatical usa la revisi\u00f3 ortogr\u00e0fica del LibreOffice/OpenOffice i la comprovaci\u00f3 gramatical i d'estil de LanguageTool.\nPer a obtenir ajuda per a elements individuals del di\u00e0leg, moveu el cursor del ratol\u00ed sobre l'element en q\u00fcesti\u00f3.
 loDialogErrorCloseMessage = Hi ha hagut un error intern.\u00a0\nEl di\u00e0leg de revisi\u00f3 ortogr\u00e0fica i gramatical de LT es tancar\u00e0. \nProveu una altra vegada. 
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Inicialitzaci\u00f3
 loCheckStatusCheck = Revisa
 loLabelCheckProgress = Text revisat:
