--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = Nur f\u00fcr Rechtschreibfehler:\n \u00c4ndert all
 loDialogAutoCorrectButtonHelp = \u00c4ndert alle falsch geschriebenen W\u00f6rter zur gew\u00e4hlten Korrektur.\nWort/Vorschlag-Paar zur Autokorrektur hinzuf\u00fcgen.
 loDialogHelpText = Der Dialog zur Rechtschreib- und Grammatikpr\u00fcfung verwendet die LibreOffice/OpenOffice-Rechtschreibpr\u00fcfung und die Grammatik- und Stilpr\u00fcfung von LanguageTool.\nUm Hilfe zu einzelnen Elementen des Dialogs zu erhalten, bewegen Sie den Mauszeiger \u00fcber das betreffende Element.
 loDialogErrorCloseMessage = Ein interner Fehler ist aufgetreten. \nDer LT-Dialog zur Rechtschreib- und Grammatikpr\u00fcfung wird geschlossen. \nBitte versuchen Sie es erneut. 
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Initialisierung
 loCheckStatusCheck = Pr\u00fcfung
 loLabelCheckProgress = Gepr\u00fcfter Text:
