--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = Solo para errores ortogr\u00e1ficos:\n Cambia toda
 loDialogAutoCorrectButtonHelp = Cambia todas las palabras mal escritas en el documento por la sugerencia seleccionada.\ny a\u00f1ade la palabra y sugerencia a la correcci\u00f3n autom\u00e1tica.
 loDialogHelpText = El di\u00e1logo de revisi\u00f3n ortogr\u00e1fica y gramatical usa la revisi\u00f3n ortogr\u00e1fica de LibreOffice/OpenOffice y la revisi\u00f3n gramatical y de estilo de LanguageTool.\nPara una ayuda sobre los elementos del di\u00e1logo, mueva el cursor del rat\u00f3n sobre el elemento en cuesti\u00f3n.
 loDialogErrorCloseMessage = Ocurri\u00f3 un error interno.\nEl di\u00e1logo de revisi\u00f3n ortogr\u00e1fica y gramatical se cerrar\u00e1.\nInt\u00e9ntelo de nuevo. 
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Inicializaci\u00f3n
 loCheckStatusCheck = Revisar
 loLabelCheckProgress = Texto revisado:
