--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = F\u00f6r stavningskontroll endast:\n \u00c4ndrar a
 loDialogAutoCorrectButtonHelp = Byter alla markerade ord till de f\u00f6reslagna i hela dokumentet.\nL\u00e4gg till ordf\u00f6rslags-par till AutoCorrect.
 loDialogHelpText = Spr\u00e5kgranskningen anv\u00e4nder LibreOffice/OpenOffices stavningskontroll och grammatik- och stilkontroll fr\u00e5n LanguageTool.\nF\u00f6r att f\u00e5 hj\u00e4lp f\u00f6r enskilda element i dialogen, flytta mark\u00f6ren till elementet i fr\u00e5ga.
 loDialogErrorCloseMessage = Ett internt fel har uppst\u00e5tt.\nLT-granskningsdialogen st\u00e4ngs.\nF\u00f6rs\u00f6k igen. 
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Startar
 loCheckStatusCheck = Granska
 loLabelCheckProgress = Granskad text:
