--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = For spelling errors only:\n Changes all misspelled
 loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
 loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
 loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = \u0406\u043d\u0456\u0446\u044b\u044f\u043b\u0456\u0437\u0430\u0446\u044b\u044f
 loCheckStatusCheck = \u041f\u0440\u0430\u0432\u0435\u0440\u044b\u0446\u044c
 loLabelCheckProgress = Checked text:
