--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = Uniquement pour les erreurs d'orthographe\u00a0:\n
 loDialogAutoCorrectButtonHelp = Modifie tous les mots mal orthographi\u00e9s pour la correction s\u00e9lectionn\u00e9e.\nAjouter la paire mot/suggestion \u00e0 la correction automatique.
 loDialogHelpText = La boite de dialogue d'orthographe et de grammaire utilise le correcteur orthographique de LibreOffice/OpenOffice et le correcteur grammatical et stylistique de LanguageTool. \nPour obtenir de l'aide concernant des \u00e9l\u00e9ments pr\u00e9cis des param\u00e8tres, passer le curseur sur l'\u00e9l\u00e9ment d\u00e9sir\u00e9.
 loDialogErrorCloseMessage = Erreur interne.\nLa bo\u00eete de dialogue LT de v\u00e9rification d'orthographe et de grammaire va \u00eatre ferm\u00e9e.\nVeuillez r\u00e9essayer.
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Initialisation
 loCheckStatusCheck = V\u00e9rifier
 loLabelCheckProgress = Texte v\u00e9rifi\u00e9 :
