--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -393,6 +393,8 @@ loDialogChangeAllButtonHelp = Tylko w przypadku b\u0142\u0119d\u00f3w pisowni: \
 loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
 loDialogHelpText = Okno dialogowe korekty pisowni i gramatyki wykorzystuje korekt\u0119 pisowni programu LibreOffice/OpenOffice oraz korekt\u0119 gramatyki i stylu z programu LanguageTool. \nAby uzyska\u0107 pomoc na temat poszczeg\u00f3lnych element\u00f3w okna, przesu\u0144 kursor myszy na dany element.
 loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
+loDialogCacheLabel = Cache status
+loDialogDoNotCheck = Don't check 
 loCheckStatusInitialization = Uruchamianie
 loCheckStatusCheck = Sprawdzanie
 loLabelCheckProgress = Checked text:
