--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -370,6 +370,8 @@ loContextMenuIgnorePermanent = Ignorer en permanence
 loContextMenuActivateRule = Activer la r\u00e8gle
 loContextMenuAddToDictionary = Ajouter au dictionnaire
 loContextMenuGrammarCheck = Correction de la grammaire\u2026
+loContextMenuRefreshCheck = Refresh Check Results
+loContextMenuAbout = About
 loDialogLanguageHelp = La langue du paragraphe dans l\u2019\u00c9diteur est affich\u00e9e.\nVeuillez d\u2019abord choisir une autre langue pour modifier celle de la partie soulign\u00e9e ou de l\u2019ensemble du paragraphe.\nUne fois la langue s\u00e9lectionn\u00e9e, le bouton \u00ab Modifier la langue \u00bb sera activ\u00e9.
 loDialogChangeLanguageHelp = La liste est d\u00e9sormais activ\u00e9e, car une nouvelle langue a \u00e9t\u00e9 s\u00e9lectionn\u00e9e.\nCliquez sur la liste pour modifier la langue :\n- de l\u2019erreur (soulign\u00e9e dans l\u2019\u00c9diteur)\n- du paragraphe entier
 loDialogMatchDescriptionHelp = Propose une description de l'erreur potentielle d\u00e9tect\u00e9e par le correcteur d'orthographe et de grammaire.
