--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -370,6 +370,8 @@ loContextMenuIgnorePermanent = Ignorera permanent
 loContextMenuActivateRule = Aktivera regeln
 loContextMenuAddToDictionary = L\u00e4gg till i ordlista
 loContextMenuGrammarCheck = Granska grammatik ...
+loContextMenuRefreshCheck = Refresh Check Results
+loContextMenuAbout = About
 loDialogLanguageHelp = Spr\u00e5ket f\u00f6r stycket visas i editorn.\nOm du vill byta spr\u00e5k f\u00f6r markeringen eller hela stycket, v\u00e4lj det nya spr\u00e5ket f\u00f6rst.\nEfter att det nya spr\u00e5ket \u00e4r valt aktiveras "V\u00e4lj spr\u00e5k"-knappen.
 loDialogChangeLanguageHelp = Listen \u00e4r aktiverad efter att ett nytt spr\u00e5k valts.\nKlicka p\u00e5 listen f\u00f6r att v\u00e4lja:\n- \u00e4ndra spr\u00e5k f\u00f6r markeringen (understruken i editorn)\n- hela stycket
 loDialogMatchDescriptionHelp = Ger en beskrivning av kontrollpunkten som hittats vid stavnings- och grammatikgranskningen.
