--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -370,6 +370,8 @@ loContextMenuIgnorePermanent = Ignorar permanente
 loContextMenuActivateRule = Activar regra
 loContextMenuAddToDictionary = Engadir ao dicionario
 loContextMenuGrammarCheck = Correcci\u00f3n gramatical...
+loContextMenuRefreshCheck = Refresh Check Results
+loContextMenuAbout = About
 loDialogLanguageHelp = M\u00f3strase o idioma do par\u00e1grafo que aparece no elemento editor.\nSe desexa cambiar o idioma da coincidencia subli\u00f1ada ou o par\u00e1grafo enteiro, escolla primeiro o novo idioma.\nO bot\u00f3n \u00abCambiar idioma\u00bb act\u00edvase unha vez seleccionado un idioma novo.
 loDialogChangeLanguageHelp = A lista est\u00e1 activada unha vez seleccionado un idioma novo. \nPrema na lista para escoller:\n - cambiar o idioma da coincidencia (subli\u00f1ada no elemento editor) \n - o par\u00e1grafo enteiro
 loDialogMatchDescriptionHelp = D\u00e1 unha descrici\u00f3n do pos\u00edbel erro atopado polos correctores ortogr\u00e1fico ou gramatical.
