[crh] initial support for Crimean Tatar

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -428,3 +428,4 @@ loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
 loStatisticalAnalysisEntireDocument = Entire document
 loStatisticalAnalysisNotAnalyzed = Not analyzed
 loStatisticalAnalysisNumber = Number
+crh = Crimean Tatar
