--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -370,8 +370,8 @@ loContextMenuIgnorePermanent = Ignorer en permanence
 loContextMenuActivateRule = Activer la r\u00e8gle
 loContextMenuAddToDictionary = Ajouter au dictionnaire
 loContextMenuGrammarCheck = Correction de la grammaire\u2026
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
+loContextMenuRefreshCheck = Actualiser les r\u00e9sultats de v\u00e9rification
+loContextMenuAbout = \u00c0 propos
 loDialogLanguageHelp = La langue du paragraphe dans l\u2019\u00c9diteur est affich\u00e9e.\nVeuillez d\u2019abord choisir une autre langue pour modifier celle de la partie soulign\u00e9e ou de l\u2019ensemble du paragraphe.\nUne fois la langue s\u00e9lectionn\u00e9e, le bouton \u00ab Modifier la langue \u00bb sera activ\u00e9.
 loDialogChangeLanguageHelp = La liste est d\u00e9sormais activ\u00e9e, car une nouvelle langue a \u00e9t\u00e9 s\u00e9lectionn\u00e9e.\nCliquez sur la liste pour modifier la langue :\n- de l\u2019erreur (soulign\u00e9e dans l\u2019\u00c9diteur)\n- du paragraphe entier
 loDialogMatchDescriptionHelp = Propose une description de l'erreur potentielle d\u00e9tect\u00e9e par le correcteur d'orthographe et de grammaire.
@@ -395,13 +395,13 @@ loDialogChangeAllButtonHelp = Uniquement pour les erreurs d'orthographe\u00a0:\n
 loDialogAutoCorrectButtonHelp = Modifie tous les mots mal orthographi\u00e9s pour la correction s\u00e9lectionn\u00e9e.\nAjouter la paire mot/suggestion \u00e0 la correction automatique.
 loDialogHelpText = La boite de dialogue d'orthographe et de grammaire utilise le correcteur orthographique de LibreOffice/OpenOffice et le correcteur grammatical et stylistique de LanguageTool. \nPour obtenir de l'aide concernant des \u00e9l\u00e9ments pr\u00e9cis des param\u00e8tres, passer le curseur sur l'\u00e9l\u00e9ment d\u00e9sir\u00e9.
 loDialogErrorCloseMessage = Erreur interne.\nLa bo\u00eete de dialogue LT de v\u00e9rification d'orthographe et de grammaire va \u00eatre ferm\u00e9e.\nVeuillez r\u00e9essayer.
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
+loDialogCacheLabel = Statut cache
+loDialogDoNotCheck = Ne pas v\u00e9rifier 
 loCheckStatusInitialization = Initialisation
 loCheckStatusCheck = V\u00e9rifier
 loLabelCheckProgress = Texte v\u00e9rifi\u00e9 :
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
+loBusyMessage = LibreOffice est occup\u00e9.  \nVeuillez r\u00e9essayer plus tard.
+loWaitMessage = Initialisation du dialogue.  \nVeuillez patienter.
 loExtHeapMessage = La limite de m\u00e9moire de LanguageTool est atteinte. Passer au mode de paragraphe unique. Certaines r\u00e8gles de texte ne seront plus affich\u00e9es.
 loExtSwitchOffMessage = LanguageTool est d\u00e9sactiv\u00e9. Veuillez le r\u00e9activer pour effectuer cette action.
 loDialogUnsupported = Le correcteur de grammaire n'inclue pas d'Objets comme des graphiques, des images ou des objets texte.\nVeuillez placer le curseur sur le texte et recommencer l'action.
