--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -370,8 +370,8 @@ loContextMenuIgnorePermanent = Ignore Permanent
 loContextMenuActivateRule = Activar regla
 loContextMenuAddToDictionary = A\u00f1adir al diccionario
 loContextMenuGrammarCheck = Revisi\u00f3n gramatical...
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
+loContextMenuRefreshCheck = Refrescar resultados de revisi\u00f3n
+loContextMenuAbout = Sobre
 loDialogLanguageHelp = Muestra el idioma del p\u00e1rrafo que se visualiza en el editor.\nSi desea cambiar el idioma de la coincidencia subrayada o de todo el p\u00e1rrafo, elija primero el nuevo idioma.\nDespu\u00e9s de seleccionar un nuevo idioma, se activa el bot\u00f3n "Cambiar idioma".
 loDialogChangeLanguageHelp = La lista est\u00e1 activa, despu\u00e9s de haber seleccionado un idioma nuevo.\nHaga clic en la lista para cambiar:\n- el idioma de la coincidencia (subrayada en el editor)\n- el p\u00e1rrafo completo.
 loDialogMatchDescriptionHelp = Da una descripci\u00f3n del posible error encontrado por la revisi\u00f3n ortogr\u00e1fica o gramatical.
